# TetrisAI

./: CMakeLists.txt  README.md
include/: cem.hpp  control.hpp  piece.hpp  shape.hpp  tetris.hpp  view.hpp
resource/: weights.txt
src/: cem.cpp  control.cpp  learn.cpp  piece.cpp  play.cpp  shape.cpp  tetris.cpp  view.cpp
